--- a/package.json
+++ b/package.json
@@ -2,12 +2,15 @@
   "name": "faq-accordion",
   "private": true,
   "version": "0.0.0",
+  "homepage": "https://github.com/kondzerau-ivan/faq-accordion",
   "type": "module",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d dist"
   },
   "dependencies": {
     "gh-pages": "^6.1.1",
